apps/development/comfyui/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
  namespace: development
  labels:
    app: comfyui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comfyui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: comfyui
    spec:
      enableServiceLinks: false
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.43.0.10
        searches:
          - development.svc.cluster.local
          - svc.cluster.local
          - cluster.local
        options:
          - name: ndots
            value: "1"
      containers:
        - name: comfyui
          image: ghcr.io/ai-dock/comfyui:latest-cuda
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8188
              protocol: TCP
          resources:
            limits:
              nvidia.com/gpu: 1
          volumeMounts:
            - name: storage
              mountPath: /workspace
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: comfyui-storage
