apps/development/comfyui/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfyui
  namespace: development
  labels:
    app: comfyui
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8188
      targetPort: 8188
      protocol: TCP
  selector:
    app: comfyui
